fixed css truncation on stories view

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -15,3 +15,12 @@ main {
 footer {
     margin-top: 20px;
 }
+
+.truncate-content {
+    height: 30vh;
+}
+
+
+div.truncate-content * {
+    overflow: hidden;
+}
